test/files/neg/t425.check
<<<<<<< HEAD
t425.scala:3: error: case class `class B' has case ancestor `class A'. Case-to-case inheritance is prohibited. To overcome this limitation use extractors to pattern match on non-leaf nodes.
=======
t425.scala:3: error: case class B has case ancestor Temp.A, but case-to-case inheritance is prohibited. To overcome this limitation, use extractors to pattern match on non-leaf nodes.
>>>>>>> 426c65030df3df0c3e038931b64199fc4e83c1a0
  case class B(override val x: Int, y: Double) extends A(x)
             ^
one error found
